test/noQnumericJoin.slq

def main(){
	if measure(H(false)){
		x:=0:ğ”¹;
	}else{
		x:=1:!â„•;
	}
	return x; /// error
}
